--- a/wibb-android/app/src/main/res/values/colors.xml
+++ b/wibb-android/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="notyet">#808080</color>
     <color name="white">#FFFFFF</color>
 
-    <color name="yello">#ccbb00</color>
+    <color name="yello">#FFC107</color>
 
     <color name="red">#bb0000</color>
     <color name="green">#009900</color>
