--- a/wibb-android/app/src/main/res/layout/offer_card.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card.xml
@@ -7,8 +7,15 @@
     android:layout_margin="5dp"
     app:cardCornerRadius="10dp">
 
+    <View
+        android:id="@+id/space_view"
+        android:layout_width="40dp"
+        android:layout_height="100dp"
+        android:background="@color/colorAccent" />
+
     <RelativeLayout
         android:layout_margin="10dp"
+        android:paddingStart="40dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,11 +25,10 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_columnWeight="1"
-            android:layout_gravity="fill_horizontal"
->
+            android:layout_gravity="fill_horizontal">
 
             <ImageView
-                android:id="@+id/offer_card_brand_img"
+                android:id="@+id/offer_card_beer_img"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:scaleType="fitCenter"
@@ -33,7 +39,7 @@
             </ImageView>
 
             <TextView
-                android:id="@+id/offer_card_brand_txt"
+                android:id="@+id/offer_card_beer_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:scaleType="fitCenter"
@@ -51,9 +57,9 @@
             android:orientation="horizontal"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_toRightOf="@+id/ll_store"
-            android:layout_alignParentRight="true"
-            android:gravity="right">
+            android:layout_toEndOf="@+id/ll_store"
+            android:layout_alignParentEnd="true"
+            android:gravity="end">
 
             <ImageView
                 android:id="@+id/offer_card_price_img"
@@ -80,22 +86,21 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="horizontal"
+        <RelativeLayout
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:layout_below="@id/ll_price"
-            android:layout_alignParentRight="true"
-
-            android:gravity="center_vertical">
+            android:layout_below="@id/ll_price">
 
             <TextView
+                android:id="@+id/bei_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitCenter"
+                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
                 android:background="@android:color/transparent"
                 android:text="bei"
-                android:layout_marginRight="5dp">
+                android:layout_marginEnd="5dp">
 
             </TextView>
 
@@ -104,6 +109,7 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="5dp"
                 android:layout_margin="5dp"
+                android:layout_toEndOf="@+id/bei_txt"
                 android:backgroundTint="#EEEEEE">
 
                 <LinearLayout
@@ -140,37 +146,19 @@
 
             </androidx.cardview.widget.CardView>
 
-
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:background="@android:color/transparent"
-                android:text="("
-                android:layout_marginLeft="5dp">
-            </TextView>
             <TextView
                 android:id="@+id/offer_card_date_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitCenter"
                 android:background="@android:color/transparent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
                 android:text="-">
 
             </TextView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
-                android:background="@android:color/transparent"
-                android:text=")">
-            </TextView>
-
-
-        </LinearLayout>
+        </RelativeLayout>
     </RelativeLayout>
 
 
