--- a/wibb-android/app/src/main/res/layout/activity_splash.xml
+++ b/wibb-android/app/src/main/res/layout/activity_splash.xml
@@ -16,4 +16,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
+<!--    <com.appersiano.progressimage.ProgressImage-->
+<!--        android:id="@+id/progress_icon"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        app:imageShadowColor=""-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:srcImage="@drawable/ic_launcher" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
