--- a/wibb-android/app/src/main/res/values/arrays.xml
+++ b/wibb-android/app/src/main/res/values/arrays.xml
@@ -7,6 +7,16 @@
         <item>@string/addoff_choose_price</item>
         <item>@string/addoff_choose_time</item>
     </string-array>
+    <!-- Reply Preference -->
+    <string-array name="reply_entries">
+        <item>Reply</item>
+        <item>Reply to all</item>
+    </string-array>
+
+    <string-array name="reply_values">
+        <item>reply</item>
+        <item>reply_all</item>
+    </string-array>
 
 
 </resources>
