implemented find nearby store

--- a/wibb-android/app/src/main/res/layout/offer_card.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card.xml
@@ -104,6 +104,7 @@
                 </TextView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView_offer_card_store"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="5dp"
