--- a/wibb-android/app/src/main/res/layout/grid_item.xml
+++ b/wibb-android/app/src/main/res/layout/grid_item.xml
@@ -30,10 +30,10 @@
         <TextView
             android:id="@+id/grid_item_text_id"
             android:gravity="center"
-            android:textSize="15dp"
+            android:textSize="15sp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="text">
+            android:text="@string/grid_item_default">
 
         </TextView>
 
