--- a/wibb-android/app/src/main/res/layout/activity_main.xml
+++ b/wibb-android/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,16 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView_noOffers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_offers"
+        android:visibility="gone">
+
+    </TextView>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_addOffer"
         android:layout_width="wrap_content"
