added new default server in rootpref

--- a/wibb-android/app/src/main/res/xml/root_preferences.xml
+++ b/wibb-android/app/src/main/res/xml/root_preferences.xml
@@ -21,15 +21,16 @@
     <PreferenceCategory
         app:title="@string/settings_header_global"
         app:iconSpaceReserved="false"
-        app:isPreferenceVisible="true">
+        app:isPreferenceVisible="false">
 
         <EditTextPreference
             app:key="apiurl"
             app:title="@string/settings_global_apiurl"
             app:useSimpleSummaryProvider="true"
             app:iconSpaceReserved="false"
-            app:isPreferenceVisible="true"
-            app:enabled="true"/>
+            app:isPreferenceVisible="false"
+            app:enabled="false"
+            app:defaultValue="https://wibb.host"/>
 
     </PreferenceCategory>
 
