--- a/wibb-android/app/src/main/res/menu/main_menu.xml
+++ b/wibb-android/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_item_settings"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="Settings"
+        android:title="@string/title_activity_settings"
         app:showAsAction="ifRoom"/>
 
 </menu>
