--- a/wibb-android/app/src/main/res/menu/offer_menu.xml
+++ b/wibb-android/app/src/main/res/menu/offer_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_item_offer_report"
         android:icon="@drawable/ic_flag_black_24dp"
-        android:title="Report Offer" />
+        android:title="@string/menuOffer_report_offer" />
     <item android:id="@+id/menu_item_offer_findNearby"
         android:icon="@drawable/ic_location_on_black_24dp"
-        android:title="Find Nearby" />
+        android:title="@string/menuOffer_find_nearby" />
 </menu>
