--- a/wibb-android/app/src/main/res/layout/activity_add_offer.xml
+++ b/wibb-android/app/src/main/res/layout/activity_add_offer.xml
@@ -81,7 +81,7 @@
                     app:sweepAngle="300"
                     app:touchInside="true"
                     app:progressColor="@color/colorAccent"
-                    app:thumb="@drawable/ic_launcher_foreground"/>
+                    app:thumb="@drawable/seekarc_thumb"/>
 
                 <TextView
                     android:id="@+id/seekArcProgress"
