--- a/wibb-android/app/src/main/res/values/colors.xml
+++ b/wibb-android/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFF</color>
 
     <color name="yello">#FFC107</color>
+    <color name="yelloshadow">#b38600</color>
 
     <color name="red">#bb0000</color>
     <color name="green">#009900</color>
