--- a/wibb-android/app/src/main/res/layout/offer_card.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card.xml
@@ -19,32 +19,42 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_margin="5dp">
+            android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/offer_card_beer_img"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_add_box_black_24dp">
+            <FrameLayout
+                android:id="@+id/offer_card_beer_img_container"
+                android:layout_width="65dp"
+                android:layout_height="80dp">
 
-            </ImageView>
+                <ImageView
+                    android:id="@+id/offer_card_beer_img"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_launcher_foreground"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginBottom="5dp">
+
+                </ImageView>
+            </FrameLayout>
 
             <ImageView
                 android:id="@+id/offer_card_gradient"
                 android:layout_width="20dp"
-                android:layout_height="60dp">
+                android:layout_height="80dp">
             </ImageView>
 
             <ImageView
                 android:id="@+id/offer_card_store_img"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_add_box_black_24dp">
+                android:src="@drawable/ic_shopping_cart_black_24dp">
             </ImageView>
 
 
@@ -74,11 +84,12 @@
                 android:id="@+id/offer_card_date_txt"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical|end"
+                android:gravity="center_vertical|start"
                 android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
                 android:scaleType="fitCenter"
                 android:fontFamily="sans-serif-light"
-                android:text="bis 27.2.2020 um"
+                android:text="von - bis"
                 android:textSize="15sp"
                 android:layout_weight="1">
 
@@ -97,23 +108,15 @@
                 android:layout_weight="0">
             </TextView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="30dp"
-                app:cardBackgroundColor="#EEEEEE"
-                android:layout_height="match_parent"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="3dp"
+            <ImageButton
+                android:id="@+id/offer_card_menu_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:layout_gravity="center"
                 android:layout_weight="0">
 
-                <ImageButton
-                    android:id="@+id/offer_card_menu_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:layout_gravity="center">
-
-                </ImageButton>
-            </androidx.cardview.widget.CardView>
+            </ImageButton>
 
         </LinearLayout>
 
