--- a/wibb-android/app/src/main/res/layout/offer_card.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card.xml
@@ -89,7 +89,7 @@
                 android:layout_marginStart="10dp"
                 android:scaleType="fitCenter"
                 android:fontFamily="sans-serif-light"
-                android:text="von - bis"
+                android:text="@string/offer_card_date_default"
                 android:textSize="15sp"
                 android:layout_weight="1">
 
@@ -102,7 +102,7 @@
                 android:gravity="center_vertical"
                 android:scaleType="fitCenter"
                 android:layout_marginEnd="10dp"
-                android:text="-€"
+                android:text="@string/addoff_price_default"
                 android:textSize="35sp"
                 android:fontFamily="sans-serif-light"
                 android:layout_weight="0">
