--- a/wibb-android/app/src/main/res/layout/favourite_item.xml
+++ b/wibb-android/app/src/main/res/layout/favourite_item.xml
@@ -33,7 +33,7 @@
 
         <ImageView
             android:id="@+id/fav_card_gradient"
-            android:layout_width="40dp"
+            android:layout_width="20dp"
             android:layout_height="match_parent">
         </ImageView>
 
@@ -44,6 +44,7 @@
             android:gravity="center_vertical"
             android:scaleType="fitCenter"
             android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
             android:text="Name"
             android:textSize="25sp"
             android:fontFamily="sans-serif-light"
