--- a/wibb-ng-admin-ui/src/app/analysis/analysis.component.html
+++ b/wibb-ng-admin-ui/src/app/analysis/analysis.component.html
@@ -1,6 +1,13 @@
-<div class="col-md-2">
-  <app-side-nav></app-side-nav>
-</div>
-<div class="col-md-10">
-  <router-outlet></router-outlet>
-</div>
+<mat-sidenav-container style="height:93vh">
+  <mat-sidenav #sidenav mode="side" [opened]="true">
+    <mat-nav-list>
+      <a mat-list-item routerLink="errors">Reported Errors</a>
+      <a mat-list-item routerLink="reports">Offer Reports</a>
+      <a mat-list-item routerLink="feedback">Feedback and Requests</a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
