--- a/wibb-ng-admin-ui/src/app/analysis/feedback/request-list/request-list.component.html
+++ b/wibb-ng-admin-ui/src/app/analysis/feedback/request-list/request-list.component.html
@@ -1,5 +1,3 @@
-<ul class="list-group">
-    <li class="list-group-item" *ngFor="let req of requests">
-        {{ req.text }}
-    </li>
-</ul>
+<mat-nav-list>
+  <mat-list-item *ngFor="let req of requests">{{ req.text }}</mat-list-item>
+</mat-nav-list>
