--- a/wibb-ng-admin-ui/src/app/app.component.html
+++ b/wibb-ng-admin-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div>
   <app-header></app-header>
 </div>
-<div class="row cont">
+<div>
   <router-outlet></router-outlet>
 </div>
