--- a/wibb-android/app/src/main/res/layout/offer_card.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="90dp">
 
 
     <androidx.cardview.widget.CardView
@@ -15,50 +15,97 @@
         app:cardCornerRadius="10dp"
         android:id="@+id/offer_card">
 
-
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
-            <FrameLayout
-                android:id="@+id/offer_card_beer_img_container"
-                android:layout_width="65dp"
-                android:layout_height="80dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <FrameLayout
+                    android:id="@+id/offer_card_beer_img_container"
+                    android:layout_width="65dp"
+                    android:layout_height="80dp">
+
+                    <ImageView
+                        android:id="@+id/offer_card_beer_img"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ic_beer_black_24dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginBottom="5dp">
+
+                    </ImageView>
+
+                </FrameLayout>
 
                 <ImageView
-                    android:id="@+id/offer_card_beer_img"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_beer_black_24dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp">
-
+                    android:id="@+id/offer_card_gradient"
+                    android:layout_width="20dp"
+                    android:layout_height="80dp">
                 </ImageView>
-            </FrameLayout>
 
-            <ImageView
-                android:id="@+id/offer_card_gradient"
-                android:layout_width="20dp"
-                android:layout_height="80dp">
-            </ImageView>
+                <FrameLayout
+                    android:layout_width="65dp"
+                    android:layout_height="80dp">
 
-            <ImageView
-                android:id="@+id/offer_card_store_img"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_shopping_cart_black_24dp">
-            </ImageView>
+                    <ImageView
+                        android:id="@+id/offer_card_store_img"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ic_shopping_cart_black_24dp">
+                    </ImageView>
+
+                </FrameLayout>
 
 
-        </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="bottom|start"
+                android:baselineAligned="false">
+
+                    <TextView
+                        android:id="@+id/textView_offerCard_beer"
+                        android:layout_width="71dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/beer"
+                        android:textSize="12sp"
+                        android:gravity="center"
+                        android:background="@drawable/pill_background"
+                        android:layout_margin="2dp"
+                        android:padding="2dp">
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/textView_offerCard_store"
+                        android:layout_width="71dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/store"
+                        android:textSize="12sp"
+                        android:gravity="center"
+                        android:background="@drawable/pill_background"
+                        android:layout_margin="2dp"
+                        android:padding="2dp">
+                    </TextView>
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </androidx.cardview.widget.CardView>
 
