--- a/wibb-android/app/src/main/res/layout/offer_card.xml
+++ b/wibb-android/app/src/main/res/layout/offer_card.xml
@@ -2,172 +2,125 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="90dp">
-
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/offer_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="6dp"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/offer_card">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <FrameLayout
-                    android:id="@+id/offer_card_beer_img_container"
-                    android:layout_width="65dp"
-                    android:layout_height="80dp">
-
-                    <ImageView
-                        android:id="@+id/offer_card_beer_img"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@android:color/transparent"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_beer_black_24dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginBottom="5dp">
-
-                    </ImageView>
-
-                </FrameLayout>
-
-                <ImageView
-                    android:id="@+id/offer_card_gradient"
-                    android:layout_width="20dp"
-                    android:layout_height="80dp">
-                </ImageView>
-
-                <FrameLayout
-                    android:layout_width="65dp"
-                    android:layout_height="80dp">
-
-                    <ImageView
-                        android:id="@+id/offer_card_store_img"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@android:color/transparent"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_shopping_cart_black_24dp">
-                    </ImageView>
-
-                </FrameLayout>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="bottom|start"
-                android:baselineAligned="false">
-
-                    <TextView
-                        android:id="@+id/textView_offerCard_beer"
-                        android:layout_width="71dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/beer"
-                        android:textSize="12sp"
-                        android:gravity="center"
-                        android:background="@drawable/pill_background"
-                        android:layout_margin="2dp"
-                        android:padding="2dp">
-
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/textView_offerCard_store"
-                        android:layout_width="71dp"
-                        android:layout_height="wrap_content"
-                        android:text="@string/store"
-                        android:textSize="12sp"
-                        android:gravity="center"
-                        android:background="@drawable/pill_background"
-                        android:layout_margin="2dp"
-                        android:padding="2dp">
-                    </TextView>
-
-            </LinearLayout>
-
-        </FrameLayout>
-
-    </androidx.cardview.widget.CardView>
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_marginStart="155dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="5dp"
-        android:id="@+id/offer_card_inner_card"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="3dp">
+        android:layout_margin="5dp"
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="end">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/offer_card_date_txt"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|start"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:scaleType="fitCenter"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/offer_card_date_default"
-                android:textSize="15sp"
-                android:layout_weight="1">
-
-            </TextView>
-
-            <TextView
-                android:id="@+id/offer_card_price_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:scaleType="fitCenter"
-                android:layout_marginEnd="10dp"
-                android:text="@string/addoff_price_default"
-                android:textSize="35sp"
-                android:fontFamily="sans-serif-light"
-                android:layout_weight="0">
-            </TextView>
-
-            <ImageButton
-                android:id="@+id/offer_card_menu_btn"
+            <LinearLayout
+                android:id="@+id/offer_card_beer_img_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:layout_gravity="center"
-                android:layout_weight="0">
+                android:orientation="vertical">
 
-            </ImageButton>
+                <ImageView
+                    android:id="@+id/offer_card_beer_img"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_beer_black_24dp" />
+
+                <TextView
+                    android:id="@+id/textView_offerCard_beer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
+                    android:text="@string/beer"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/offer_card_gradient"
+                android:layout_width="20dp"
+                android:layout_height="match_parent" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/offer_card_store_img"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@android:color/transparent"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_shopping_cart_black_24dp" />
+
+                <TextView
+                    android:id="@+id/textView_offerCard_store"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
+                    android:text="@string/store"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/offer_card_inner_card"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/offer_card_date_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="center_vertical|start"
+                        android:scaleType="fitCenter"
+                        android:text="@string/offer_card_date_default"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:id="@+id/offer_card_price_txt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="0"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="center_vertical"
+                        android:scaleType="fitCenter"
+                        android:text="@string/addoff_price_default"
+                        android:textSize="35sp" />
+
+                    <ImageButton
+                        android:id="@+id/offer_card_menu_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="0"
+                        android:background="@android:color/transparent" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 </FrameLayout>
